Fix layout issue in safari/chrome.
Related Posts section was overlapping at 101vh

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -1,12 +1,12 @@
 @import 'variables';
 
 html {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
